Fix community insights making plug/perk selection unusable on mobile.
Fixes #10639

--- a/src/app/item-popup/PlugTooltip.m.scss
+++ b/src/app/item-popup/PlugTooltip.m.scss
@@ -48,6 +48,11 @@
   }
   .communityInsightSection {
     @include tooltip-section-color($communityBlue);
+
+    @include phone-portrait {
+      max-height: 25vh;
+      overflow: hidden;
+    }
     h3 {
       opacity: 0.6;
     }
